# DZ__Py49-onl

./: .gitignore  README.md
01__06.12.2023/: DZ__01.xlsx
02__04.12.2023__virtualenv/: DZ__02.docx  DZ__02.py  pyproject.toml
03__06.12.2023__PEP/: DZ__03.py
04__11.12.2023__types/: DZ__04.py
05__13.12.2023__for/: DZ__05.py
06__18.12.2023__math/: DZ__06.py
10__15.01.2024__Git/: DZ__10__create this repo.txt
