[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = "тестируем поетри"
authors = ["Александр Колосун (Aleksandr.Kolosun)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
